Fix a gap when contributors present on banner

--- a/assets/stylesheets/common/campaign.scss
+++ b/assets/stylesheets/common/campaign.scss
@@ -46,6 +46,7 @@
     margin: 1em 0;
     padding: 1em;
     &-users {
+      align-items: stretch;
       display: flex;
       flex-direction: column;
       margin: 0;
@@ -77,7 +78,7 @@
   margin: 1em 0 2em 0;
   border: 1px solid var(--primary-low);
   position: relative;
-  align-items: center;
+  align-items: stretch;
   .btn.close {
     position: absolute;
     top: 1em;
